[92201954] Top nav search spacing/alignment issues on mobile
- When searching on mobile, the search input was too far to the left
  which was caused by flex-box adding too much width to the menu
  icon element. A min and max width was imposed on the element.
- Moved .inner_padding_large to individual elements in top nav
  as opposed to having the padding on the top nav element itself.
  This allows for the touch area of the menu icon to be 44px with
  the icon centered in that width.

--- a/app/assets/stylesheets/views/layouts/_top_nav.sass
+++ b/app/assets/stylesheets/views/layouts/_top_nav.sass
@@ -24,14 +24,14 @@ $results_margin_offset: -($results_margin_inner)
 
   .menu_icon
     cursor: pointer
-    width: rem(44)
+    min-width: rem(44)
+    max-width: rem(44)
 
   .search
     min-width: rem(44)
 
     input
       display: none
-      height: $line_height_buffer_base
 
     .search_results_container
       position: relative
